--- a/jsprit-examples/pom.xml
+++ b/jsprit-examples/pom.xml
@@ -63,6 +63,19 @@
             <artifactId>log4j-core</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
     </dependencies>
 
 </project>
