--- a/jsprit-examples/pom.xml
+++ b/jsprit-examples/pom.xml
@@ -83,6 +83,12 @@
             <version>1.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
+
 
     </dependencies>
 
